# dsg-calver

./: 404.html  CHANGELOG.md  README.md  coverage.xml  htmlcovreport.html  htmlreport.html  index.html  makefile  mkdocs.yml  p.py  pyproject.toml  report.html  report.xml  requirements.txt  timezones_table.html
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: pythonpublish.yml  release-drafter.yaml  testing.yml
about/: index.html
contribute/: index.html
docs/: about.md  index.md  modules.md  quickstart.md  release-notes.md  timezones.md
dsg-calver/: calver.py
examples/: dockerfile  example.json  example.py  example.toml  example.xml  example.yaml  makefile  p.py  pyproject.toml
index2/: index.html
modules/: index.html
print_page/: index.html
quickstart/: index.html
quickstart2/: index.html
release-notes/: index.html
scripts/: changelog.py
search/: search_index.json
src/bumpcalver/: __init__.py  _date_functions.py  _file_types.py  cli.py  cli_orginal.py  cli_two.py  config.py  file_handlers.py  handlers.py  path_parser.py  utils.py
tests/: test_cli.py  test_config.py  test_date_files.py  test_git_utils.py  test_handlers.py  test_utils.py  xtest_cli_original.py
timezones/: index.html
